Cambios para correr app

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "FSNotifications",
   "version": "1.0.0",
   "description": "Una simple aplicacion en electron utilizando la API de notificacion",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
